automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -531,7 +531,8 @@
    "outputs": [],
    "source": [
     "def nearest_neighbors(first_neighbor, neighbors, number = None):\n",
-    "    list(map(lambda second_neighbor: second_neighbor.update({'distance': distance(first_neighbor, second_neighbor)}), neighbors))\n",
+    "    \n",
+    "    #list(map(lambda second_neighbor: second_neighbor.update({'distance': distance(first_neighbor, second_neighbor)}), neighbors))\n",
     "    #list(filter(distance_a11(first_neighbor, neighbors)['distance'] < 5, \n",
     "    pass"
    ]
