automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -531,7 +531,10 @@
    "outputs": [],
    "source": [
     "def nearest_neighbors(first_neighbor, neighbors, number = None):\n",
-    "    \n",
+    "    sort_on = \"key2\"\n",
+    "   decorated = [(dict_[sort_on], dict_) for dict_ in undecorated]\n",
+    "   3 decorated.sort()\n",
+    "   4 result = [dict_ for (key, dict_) in decorated]\n",
     "    #list(map(lambda second_neighbor: second_neighbor.update({'distance': distance(first_neighbor, second_neighbor)}), neighbors))\n",
     "    #list(filter(distance_a11(first_neighbor, neighbors)['distance'] < 5, \n",
     "    pass"
