automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -531,7 +531,7 @@
    "outputs": [],
    "source": [
     "def nearest_neighbors(first_neighbor, neighbors, number = None):\n",
-    "    sort_on = \"key2\"\n",
+    "    sort_on = \"distance\"\n",
     "    decorated = [(dict_[sort_on], dict_) for dict_ in undecorated]\n",
     "    decorated.sort()\n",
     "    result = [dict_ for (key, dict_) in decorated]\n",
