automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -532,7 +532,7 @@
    "source": [
     "def nearest_neighbors(first_neighbor, neighbors, number = None):\n",
     "    sort_on = \"distance\"\n",
-    "    decorated = [(dict_[sort_on], dict_) for dict_ in distance_all(first_neighbor, nig)]\n",
+    "    decorated = [(dict_[sort_on], dict_) for dict_ in distance_all(first_neighbor, neighbors)]\n",
     "    decorated.sort()\n",
     "    result = [dict_ for (key, dict_) in decorated]\n",
     "    #list(map(lambda second_neighbor: second_neighbor.update({'distance': distance(first_neighbor, second_neighbor)}), neighbors))\n",
