automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -534,7 +534,9 @@
     "    sort_on = \"distance\"\n",
     "    decorated = [(dict_[sort_on], dict_) for dict_ in distance_all(first_neighbor, neighbors)]\n",
     "    decorated.sort()\n",
-    "    re[dict_ for (key, dict_) in decorated]\n",
+    "    [dict_ for (key, dict_) in decorated]\n",
+    "    \n",
+    "    \n",
     "    #list(map(lambda second_neighbor: second_neighbor.update({'distance': distance(first_neighbor, second_neighbor)}), neighbors))\n",
     "    #list(filter(distance_a11(first_neighbor, neighbors)['distance'] < 5, \n",
     "    pass"
