--- a/index.ipynb
+++ b/index.ipynb
@@ -535,7 +535,7 @@
     "    decorated = [(dict_[sort_on], dict_) for dict_ in distance_all(first_neighbor, neighbors)]\n",
     "    decorated.sort()\n",
     "    [dict_ for (key, dict_) in decorated]\n",
-    "    for number s\n",
+    "    for \n",
     "    \n",
     "    #list(map(lambda second_neighbor: second_neighbor.update({'distance': distance(first_neighbor, second_neighbor)}), neighbors))\n",
     "    #list(filter(distance_a11(first_neighbor, neighbors)['distance'] < 5, \n",
