automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -534,7 +534,7 @@
     "    sort_on = \"distance\"\n",
     "    decorated = [(dict_[sort_on], dict_) for dict_ in distance_all(first_neighbor, neighbors)]\n",
     "    decorated.sort()\n",
-    "    [dict_ for (key, dict_) in decorated]\n",
+    "    sorted_[dict_ for (key, dict_) in decorated]\n",
     "    for i in list(range(1, number+1)):\n",
     "        \n",
     "    \n",
