--- a/index.ipynb
+++ b/index.ipynb
@@ -534,9 +534,9 @@
     "    sort_on = \"distance\"\n",
     "    decorated = [(dict_[sort_on], dict_) for dict_ in distance_all(first_neighbor, neighbors)]\n",
     "    decorated.sort()\n",
-    "    sorted_[dict_ for (key, dict_) in decorated]\n",
+    "    sorted_list = [dict_ for (key, dict_) in decorated]\n",
     "    for i in list(range(1, number+1)):\n",
-    "        \n",
+    "        sorted_\n",
     "    \n",
     "    #list(map(lambda second_neighbor: second_neighbor.update({'distance': distance(first_neighbor, second_neighbor)}), neighbors))\n",
     "    #list(filter(distance_a11(first_neighbor, neighbors)['distance'] < 5, \n",
