--- a/index.ipynb
+++ b/index.ipynb
@@ -536,7 +536,7 @@
     "    decorated.sort()\n",
     "    sorted_list = [dict_ for (key, dict_) in decorated]\n",
     "    for i in list(range(1, number+1)):\n",
-    "        sorted_list[1]\n",
+    "        sorted_list[i]\n",
     "        \n",
     "    \n",
     "    #list(map(lambda second_neighbor: second_neighbor.update({'distance': distance(first_neighbor, second_neighbor)}), neighbors))\n",
