--- a/index.ipynb
+++ b/index.ipynb
@@ -535,7 +535,7 @@
     "    decorated = [(dict_[sort_on], dict_) for dict_ in distance_all(first_neighbor, neighbors)]\n",
     "    decorated.sort()\n",
     "    sorted_list = [dict_ for (key, dict_) in decorated]\n",
-    "    for i in list(range(1, number+1)):\n",
+    "    for i in range(1, number+1)):\n",
     "        return sorted_list[i]\n",
     "        \n",
     "    \n",
