--- a/index.ipynb
+++ b/index.ipynb
@@ -526,7 +526,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -535,7 +535,7 @@
     "    decorated = [(dict_[sort_on], dict_) for dict_ in distance_all(first_neighbor, neighbors)]\n",
     "    decorated.sort()\n",
     "    sorted_list = [dict_ for (key, dict_) in decorated]\n",
-    "    for i in lrange(1, number+1):\n",
+    "    for i in list(range(1, number+1)):\n",
     "        return sorted_list[i]\n",
     "        \n",
     "    \n",
@@ -546,7 +546,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -555,7 +555,7 @@
        "{'name': 'Bob', 'avenue': 5, 'street': 8, 'distance': 1.0}"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
