--- a/index.ipynb
+++ b/index.ipynb
@@ -537,7 +537,7 @@
     "    sorted_list = [dict_ for (key, dict_) in decorated]\n",
     "    fitered_sorted_list = []\n",
     "    for i in list(range(1, number+1)):\n",
-    "        return sorted_list[i]\n",
+    "        filtered_sosorted_list[i]\n",
     "        \n",
     "    \n",
     "    #list(map(lambda second_neighbor: second_neighbor.update({'distance': distance(first_neighbor, second_neighbor)}), neighbors))\n",
