--- a/index.ipynb
+++ b/index.ipynb
@@ -535,10 +535,10 @@
     "    decorated = [(dict_[sort_on], dict_) for dict_ in distance_all(first_neighbor, neighbors)]\n",
     "    decorated.sort()\n",
     "    sorted_list = [dict_ for (key, dict_) in decorated]\n",
-    "    fitered_sorted_list = []\n",
+    "    filtered_sorted_list = []\n",
     "    for i in list(range(1, number+1)):\n",
     "        filtered_sorted_list.append(sorted_list[i])\n",
-    "    return \n",
+    "    return filtered_sorte\n",
     "        \n",
     "    \n",
     "    #list(map(lambda second_neighbor: second_neighbor.update({'distance': distance(first_neighbor, second_neighbor)}), neighbors))\n",
