automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -526,7 +526,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -538,7 +538,7 @@
     "    filtered_sorted_list = []\n",
     "    for i in list(range(1, number+1)):\n",
     "        filtered_sorted_list.append(sorted_list[i])\n",
-    "    return filtered_sorte\n",
+    "    return filtered_sorted_list\n",
     "        \n",
     "    \n",
     "    #list(map(lambda second_neighbor: second_neighbor.update({'distance': distance(first_neighbor, second_neighbor)}), neighbors))\n",
@@ -548,16 +548,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'name': 'Bob', 'avenue': 5, 'street': 8, 'distance': 1.0}"
+       "[{'name': 'Bob', 'avenue': 5, 'street': 8, 'distance': 1.0},\n",
+       " {'name': 'Steven', 'avenue': 3, 'street': 6, 'distance': 2.23606797749979}]"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
